adjustments before launch

--- a/frontend_templates/interview_q/create.html
+++ b/frontend_templates/interview_q/create.html
@@ -138,17 +138,17 @@
                         </div>
                     </div>
                 </section>
-                <h2 class="step-title">Starter Code</h2>
+                <h2 class="step-title">Starter/Required Files</h2>
                 <section>
                     <div class="row">
                         <div class="col-md-12">
                             <p class="step-description">Detail the names and contents of the files that the user has to submit. For every file that has to be submitted, 
-                                    a starter code file needs to be declared. You can optionally fill in some parts of the file 
-                                    to get the interviewee started. For non-programming files, just declare the name and toggle the Code switch and leave the body blank. Note that this code will be in the same directory as your starter code. <br />An example is below in the "Code" option of the toggle.
+                                    a file below needs to be declared. You can optionally fill in some parts of the file 
+                                    to get the interviewee started. For non-programming files, just declare the name and toggle the Code switch and leave the body blank. Note that this code will be in the same directory as your supporting code. <br />An example is below in the "Code" option of the toggle.
                             </p>
                             <hr />
                             <div class="form-group, step">
-                                <label class="code-label">Starter Code (visible to users)</label> <br />
+                                <label class="code-label">Starter/Required Files (visible to users)</label> <br />
                                 <div id="starter_fields">
                                     <div>
                                         <div class="centered">File <label class="switch"><input type="checkbox" name="starter_switch_1" id="starter_switch_1"><span class="slider round"></span></label> Code</div>
@@ -238,16 +238,16 @@ class TestCases(unittest.TestCase):
                         </div>
                     </div>
                 </section>
-                <h2 class="step-title">Solution</h2>
+                <h2 class="step-title">Sample Submission</h2>
                 <section>
                     <div class="row">
                         <div class="col-md-12">
-                            <p class="step-description">Provide a solution to ensure the code compiles. The solution files should correspond to the starter files. If you do not provide this, then the only way to validate behavior is to try out the question.
-                                    If you submit solution files, we will run your solution and the problem after you create this question to ensure everything is running smoothly. <br />An example is below in the "Code" option of the toggle.
+                            <p class="step-description">Provide a sample submission to ensure the code compiles. The submission files should correspond to the required files. If you do not provide this, then the only way to validate behavior is to try out the question.
+                                    If you submit a sample submission, the site will run your submission to ensure everything is running smoothly. <br />An example is below in the "Code" option of the toggle.
                                 </p>
                                 <hr />
                             <div class="form-group, step">
-                                <label class="code-label">Optional Solution Code (Not visible to users)</label> <br />
+                                <label class="code-label">Optional Submission Code (Not visible to users)</label> <br />
                                 <div id="solution_fields">
                                     <div>
                                         <div class="centered">File <label class="switch"><input type="checkbox" name="solution_switch_1" id="solution_switch_1"><span class="slider round"></span></label> Code</div>
