--- a/frontend_templates/interview_q/create.html
+++ b/frontend_templates/interview_q/create.html
@@ -129,7 +129,7 @@
                                 <center><label>Methods Shown To The User (Visible to users)</label><hr /></center>
                                 <div id="api_fields">
                                     <div>
-                                        <textarea class="form-control" id="api_method_1" name="api_method_1" placeholder="Method Name: description, args, return type"></textarea><br />
+                                        <textarea class="form-control" rows=5 id="api_method_1" name="api_method_1" placeholder="Method Name: description, args, return type"></textarea><br />
                                     </div>
                                 </div>
                                 <button type="button" class="btn btn-light small-margin-top" onclick="add_api_field()">Add Method</button>
