--- a/frontend_templates/info/home.html
+++ b/frontend_templates/info/home.html
@@ -143,7 +143,7 @@ def tell_them_what_encompass_is_all_about():
 
   message = your_code_library.yourMethod(description)
 #TODO: Add more methods here.`;
-          name_to_body["API Description"] = `Because Encompass offers tools to prevent the interviewee from seeing your code base, describe 
+          name_to_body["API Description"] = `Because Encompass automatically encrypts your code base and offers tools to prevent the interviewee from seeing your other files, describe 
           what the interviewee can interact with in this API description!`;
           name_to_body["API Methods"] = '<code>yourMethod(message)</code>: Sets the message attribute of the class. One argument: message (String). Returns a string';
           name_to_body["Example Code"] = `# Give the interviewee examples of how your code is used\nunique_function_return = your_code_library.UniqueMethod(342, "yes")`;
