--- a/frontend_templates/interview_q/question.html
+++ b/frontend_templates/interview_q/question.html
@@ -28,7 +28,7 @@
                         <div class="col-md-12">
                             <p class="page-description">
                                 <b class="bold-text">How it works:</b><br /><br /> When a user submits their code,
-                                the interviewee's code, your support (code base) files and test files will all be moved in the same directory and the test files
+                                the interviewee's code, your encrypted support (code base) files and test files will all be moved in the same directory and the test files
                                 will be ran. You should keep this in mind when writing your code. 
                                 The interviewee will be brought to the results screen with a display of the visible tests they passed. After the interviewee submits, you
                                 will be able to see the interviewee's test results and code submission. 
@@ -82,7 +82,7 @@
                     <div class="row">
                         <div class="col-md-12">
                         <p class="step-description">This section is for your code base and other supporting files (e.g. datasets). Write code and add files that the user can interact with. This code is not seen 
-                                by the user and is used only for compilation. The supporting files' contents can be protected by disabling imports such as <code>os</code> and disabling network access.                  
+                                by the user and is used only for compilation. This code is automatically encrypted so even if the user has access to the files, they cannot see the original contents. Note: we currently only encrypt Python files. Other file types can be protected by disabling imports such as <code>os</code> that allow the interviewee to look at the files, displaying printing during tests to stop any inspecting of the contents, and disabling network access so that the interviewee cannot send the contents anywhere.                  
                         </p><hr />
                         <label class="code-label">Select Additional Imports For Your Project (Visible to users) <br />
                             <p class="field_description">Don't see something you need? <a href="mailto: support@encompassinterviews.com">Contact Us</a></p></label><br />
